Quisk Version 4.2.45  October 2025
==================================
The new FreeDV including RADE mode is now a built-in mode of Quisk. Just press "FDV" to talk FreeDV.
In brief, install FreeDV-GUI from the web site. Then configure the usual Quisk digital input and
output that you use for digital modes. In FreeDV-GUI use the digital input and output. For the
speakers and microphone use the same ones as Quisk. Don't forget to configure your call sign in
FreeDV so it works with FreeDV Reporter. For detailed instructions see http://james.ahlstrom.name/rade.html.

The Quisk digital output device is now always active; a DGT mode is not required.

Quisk Version 4.2.44  September 2025
====================================
Quisk now has Pure Signal for the Hermes Lite2. This is baseband predistortion to reduce IMD products.
To use it, press "PsCal" for calibration, and "PS" to enable Pure Signal. There are no adjustments needed.
More details are in the documentation.

Quisk Version 4.2.43  September 2025
====================================
I fixed a bug in the WDSP library NR2 noise reduction feature. I added the "Trained" method of NR2.
Quisk uses the WDSP library for the NR2 noise reduction and the SNB noise blanker. The WDSP library must be available
for these features to work. For windows, the library is included. For Linux you must build it by changing to the
quisk/wdsp directory and entering "make". The library is used in-place and no installation is necessary.
The new "trained" method of NR2 is included. Press the NR2 button twice to select "NR2t".

I added documentation for the new FreeDV mode RADE. See http://james.ahlstrom.name/rade.html.
The default IMD magnitude is now 100%.

Quisk Version 4.2.42  April 2025
================================
I fixed a bug in the Kenwood IF CAT command. Thanks Nick!  I moved the Pulse server IP address to the Sound screen.